# circom-witnesscalc

./: .gitignore  Cargo.toml  build-wasm.bash  build.rs  extract_performance.bash  performance_comparison.md  performance_tests.bash  test_circuits.sh  wasm.bash
nodejs/: package-lock.json  package.json
nodejs/src/: build-circuit.js  calc-witness.js  shared.js
src/: build_circuit.rs  field.rs  graph.rs  lib.rs  storage.rs  wasm.rs
web/: package.json
