[package]
name = "circom_witnesscalc"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/iden3/circom-witnesscalc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = { version = "0.4.0", features = ["std"] }
ark-ff = { version = "0.4.0", features = ["std"] }
ark-serialize = { version = "0.4", features = ["derive"] }
byteorder = "1.4.3"
hex = "0.4.3"
postcard = { version = "1.0.8", features = ["use-std"], default-features = false }
rand = "0.8.5"
ruint = { version = "1.10.0", features = ["rand", "serde", "ark-ff-04"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.64"
wtns-file = "0.1.5"
lazy_static = "1.4.0"
libc = "0.2.155"
# circom dependencies
compiler = { path = "../circom/compiler" }
code_producers = { path = "../circom/code_producers" }
program_structure = { path = "../circom/program_structure" }
#parser = { path = "../circom/parser" }
parser_wasm = { path = "../circom/parser_wasm" }
type_analysis = { path = "../circom/type_analysis" }
constraint_generation = { path = "../circom/constraint_generation" }
#compiler = { git = "https://github.com/olomix/circom.git", branch = "master" }
#code_producers = { git = "https://github.com/olomix/circom.git", branch = "master" }
#program_structure = { git = "https://github.com/olomix/circom.git", branch = "master" }
#parser = { git = "https://github.com/olomix/circom.git", branch = "master" }
#type_analysis = { git = "https://github.com/olomix/circom.git", branch = "master" }
#constraint_generation = { git = "https://github.com/olomix/circom.git", branch = "master" }
prost = "0.13.1"

# wasm
wasm-bindgen = { version = "0.2.93", optional = true, features = ["serde-serialize"] }
getrandom = { version = "*", features = ["js"], default-features = false, optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
#wee_alloc = { version = "0.4", optional = true } # Added because of "too many locals" error in dev mode compilation
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4.6"
wasm-logger = { version = "0.2", optional = true }
vfs = { version = "0.12.0", features = ["embedded-fs"], optional = true } # using /mw/wasm-support branch because of WASM issues: https://github.com/manuel-woelker/rust-vfs/issues/68#issuecomment-2108028157
#vfs = { path = "../rust-vfs", features = ["embedded-fs"], optional = true }
rust-embed = { version = "6.1.0", optional = true }
web-time = "1.1.0"

[features]
wasm = [
    "wasm-bindgen",
    "getrandom/js",
    "serde-wasm-bindgen",
    #    "wee_alloc"
    "console_error_panic_hook",
    "wasm-logger",
    "vfs",
    "rust-embed"
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
# Fixes "too many locals: locals exceed maximum" when running "wasm-pack ... --dev"
opt-level = 1
incremental = true

# TODO: I'm unable t find these symbols in the debugger, what is wrong?
# https://github.com/rustwasm/wasm-pack/issues/1351
[package.metadata.wasm-pack.profile.dev]
wasm-bindgen = { dwarf-debug-info = true }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
bindgen = "0.69.4"
prost-build = "0.13.1"
